--- a/Untitled-Copy2.ipynb
+++ b/Untitled-Copy2.ipynb
@@ -74,11 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "b233324d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "PATH=os.path.join(os.getcwd(),'master-shell-352711-035a6f0dc8c6.json')\n",
     "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"]=PATH"
    ]
@@ -365,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "66dd51e0",
    "metadata": {},
    "outputs": [],
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "071020c4",
    "metadata": {},
    "outputs": [
@@ -492,18 +493,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=563165058799-0ngsr5ll27hpp8ab6cbdhn7bifikk79t.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A49577%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.metadata.readonly&state=src72Ay0ijIInVTF2FcCrQXqz5dYZu&access_type=offline\n",
       "Files:\n",
-      "amit_new_folder (1dkW1IFQ-7EzlgfXfJVUcmN8oOVi6kIlk)\n",
-      "pipeline_folder (13auAvxuZ2cMVCj-y5bQLLaGgDgWxKCXZ)\n",
-      "New  Attendance Sheet (1ttrj8t0D2MySciJgIZ8G1MQRBz0joEQFYsLhVMDCAT0)\n",
-      "database (1OT9bGfVeDZmKOmNyeFcVOqr4H4FzIjMXW6TIn3cEHIA)\n",
-      "5 Dec bord - Pravin Borkar.pdf (1hcEUrO7F5m75e3v_nf_xQtIOyg9POUUd)\n",
-      "4 Dec.  - Pravin Borkar.pdf (1OBAWo46sTDPqn4QQcwEh_i6IJrIK6-y3)\n",
-      "3 Dec bord - Pravin Borkar.pdf (1QZzWCNgduSy4b-uBehJ3j9Nn0S1Viyrh)\n",
-      "20221203_095117 - Pravin Borkar.jpg (1aibPThxgtB23RXtDMDptIMoqnooUKQfi)\n",
-      "16700457875141337261642918974974 - Pravin Borkar.jpg (1ZGQr9sZJgfx2FjM5j12J2_0zciGYhgT-)\n",
-      "02 Dec.bord - Pravin Borkar.pdf (1MxM_UwjFVcGGI1LacAzBfO43Y9aFni4h)\n"
+      "car_company.csv (1VxfujWkjWpQZ-Tm7OeMqA45UTsuzAMU0)\n"
      ]
     }
    ],
@@ -520,6 +511,19 @@
     "\n",
     "# If modifying these scopes, delete the file token.json.\n",
     "SCOPES = ['https://www.googleapis.com/auth/drive.metadata.readonly']\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_blobs():\n",
+    "    client = storage.Client() \n",
+    "    bucket_name = client.get_bucket(\"practise_bucket3456\")\n",
+    "    objects_in_bucket = client.list_blobs(bucket_name, fields='items(name)')\n",
+    "    object_names = []\n",
+    "    for object in objects_in_bucket:\n",
+    "        object_names.append(object.name)\n",
+    "    return object_names\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "def main():\n",
@@ -545,23 +549,68 @@
     "            token.write(creds.to_json())\n",
     "\n",
     "    try:\n",
-    "        service = build('drive', 'v3', credentials=creds)\n",
+    "        drive = build('drive', 'v3', credentials=creds)\n",
+    "        \n",
+    "        files = []\n",
+    "        page_token = None\n",
+    "        file_to_download = None\n",
+    "        objects_list = get_blobs()\n",
+    "        \n",
+    "        while True:\n",
+    "    \n",
+    "            folderId = drive.files().list(q = \"mimeType = 'application/vnd.google-apps.folder' and name = 'test_pipeline'\", pageSize=10, fields=\"nextPageToken, files(id, name)\").execute()\n",
+    "            folderIdResult = folderId.get('files', [])\n",
     "\n",
-    "        # Call the Drive v3 API\n",
-    "        results = service.files().list(\n",
-    "            pageSize=10, fields=\"nextPageToken, files(id, name)\").execute()\n",
-    "        items = results.get('files', [])\n",
+    "            id = folderIdResult[0].get('id')\n",
+    "            results = drive.files().list(q = \"'\" + id + \"' in parents\", pageSize=10, fields=\"nextPageToken, files(id, name)\").execute()\n",
     "\n",
-    "        if not items:\n",
-    "            print('No files found.')\n",
-    "            return\n",
-    "        print('Files:')\n",
-    "        for item in items:\n",
-    "            print(u'{0} ({1})'.format(item['name'], item['id']))\n",
+    "            items = results.get('files', [])  \n",
+    "\n",
+    "            if not items:\n",
+    "                print('No files found.')\n",
+    "                return\n",
+    "            print('Files:')\n",
+    "            for item in items:\n",
+    "                print(u'{0} ({1})'.format(item['name'], item['id']))\n",
+    "                file_id = item.get(\"id\")\n",
+    "                file_name = item.get(\"name\")\n",
+    "                if file_name not in objects_list:\n",
+    "                    request = service.files().get_media(fileId=file_id)\n",
+    "                    file_download_buffer = io.BytesIO()\n",
+    "                    downloader = MediaIoBaseDownload(file_download_buffer, request)\n",
+    "                    done = False\n",
+    "                    while done is False:\n",
+    "                        status, done = downloader.next_chunk()\n",
+    "                        print(F'Download {int(status.progress() * 100)}.')\n",
+    "\n",
+    "                    upload_to_drive(file_download_buffer,file_name)\n",
+    "\n",
+    "            files.extend(folderId.get('files', []))\n",
+    "            page_token = folderId.get('nextPageToken', None)\n",
+    "\n",
+    "\n",
+    "            if page_token is None:\n",
+    "                break\n",
+    "         \n",
+    "            \n",
+    "            \n",
     "    except HttpError as error:\n",
     "        # TODO(developer) - Handle errors from drive API.\n",
     "        print(f'An error occurred: {error}')\n",
     "\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "def upload_to_drive(file, file_name):\n",
+    "    client = storage.Client()\n",
+    "    bucket_name = client.get_bucket(\"practise_bucket3456\")\n",
+    "    blob = Blob(file_name, bucket_name)\n",
+    "    blob.upload_from_file(file, rewind=True)\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
@@ -569,8 +618,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "39fa3e62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['amit',\n",
+       " 'amrik',\n",
+       " 'car_company.csv',\n",
+       " 'kishal',\n",
+       " 'pabitra',\n",
+       " 'proloy',\n",
+       " 'sabir',\n",
+       " 'suman',\n",
+       " 'sumit']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_blobs():\n",
+    "    client = storage.Client() \n",
+    "    bucket_name = client.get_bucket(\"practise_bucket3456\")\n",
+    "    objects_in_bucket = client.list_blobs(bucket_name, fields='items(name)')\n",
+    "    object_names = []\n",
+    "    for object in objects_in_bucket:\n",
+    "        object_names.append(object.name)\n",
+    "    return object_names\n",
+    "\n",
+    "\n",
+    "\n",
+    "lst=get_blobs()\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2714231",
    "metadata": {},
    "outputs": [],
    "source": []
